--- a/q11-3.html
+++ b/q11-3.html
@@ -49,7 +49,7 @@
                 <td>28.2%</td>
                 <td>64.9%</td>
             </tr>
-            <caption>2015 국민 독서실태<caption>
+            <caption>2015 국민 독서실태777<caption>
         </figure>
     </table>
 </body>
