--- a/HTML5_Javascript_test.html
+++ b/HTML5_Javascript_test.html
@@ -7,11 +7,16 @@
     <style>
         table{
             padding: 1px;
-            width: 550px;
-            height: 250px;
+            /* width: 550px; */
+            /* height: 250px; */
         }
         th{
+            padding-top: 2px;
+            padding-bottom: 2px;
             text-align: center;
+        }
+        .lineheight{
+            line-height: 1.5em;
         }
     </style>
 </head>
@@ -21,28 +26,28 @@
             <th colspan="5">IT 시간표</th>
         </tr>
         <tr >
-            <th style="width: 80px;"></th>
-            <th style="width: 40px;">401호</th>
-            <th style="width: 100px;">402호</th>
-            <th style="width: 140px;">403호</th>
-            <th style="width: 90px;">404호</th>
+            <th ></th>
+            <th >401호</th>
+            <th >402호</th>
+            <th >403호</th>
+            <th >404호</th>
         </tr>
         <tr>
             <th>09:00-12:00</th>
-            <th rowspan="4" >공<br><br> 사<br><br> 중</td>
+            <th rowspan="4" style="line-height: 2.5em;" >공<br>사<br>중</td>
             <td>PYTHON 기 초</td>
-            <td rowspan="2">네트워크보안<br> 실무자 양성</td>
-            <td>보충훈련 과정(OS/네트워크)</td>
+            <td rowspan="2" class="lineheight">네트워크보안<br> 실무자 양성</td>
+            <td class="lineheight">보충훈련 과정<br>(OS/네트워크)</td>
         </tr>
         <tr>
             <th>12:30-15:30</th>
             <td>JAVA</td>
-            <td>보충훈련 과정(언어계열)</td>
+            <td class="lineheight">보충훈련 과정<br>(언어계열)</td>
         </tr>
         <tr>
             <th>15:30-18:30</th>
             <td>C언어</td>
-            <td rowspan="2">가상화 시스템<br> 엔지니어 실무자 양성</td>
+            <td rowspan="2" class="lineheight">가상화 시스템<br> 엔지니어 실무자 양성</td>
             <td>리눅스</td>
         </tr>
         <tr>
