--- a/HTML5_Javascript_test.html
+++ b/HTML5_Javascript_test.html
@@ -7,6 +7,7 @@
     <style>
         table{
             padding: 1px;
+            /* width: 100%; */
         }
         th{
             padding-top: 2px;
